@@ -135,7 +135,7 @@ tested yet, but I can fix any issues that come up if this is needed.</p><h2 id="
     <div class='docstring'>
   <p>[Array<c3.Table.Column>] An array of column objects which describe how to construct the table.
 Column objects can contain the following members:</p><ul>
-<li><strong>header</strong> [<a href='../../class/c3/Selection.Options.html'>c3.Selection.Options</a>] Options to describe the header contents, styles, events, etc. Use <code>text</code> or <code>html</code> to define the content for the header.</li>
+<li><strong>header</strong> [<a href='../../class/c3/Selection.Options.html'>c3.Selection.Options</a>] Options to describe the header contents, styles, events, etc. Use <code>text</code> or <code>html</code> to define the content for the header. Column headers are optional.</li>
 <li><strong>cells</strong> [<a href='../../class/c3/Selection.Options.html'>c3.Selection.Options</a>] Options to describe the cell contents, styles, events, etc. Use <code>text</code> or <code>html</code> to define the cell contents.</li>
 <li><strong>sortable</strong> [Boolean] - Boolean to define if the counter should be user-sortable by clicking on the header.</li>
 <li><strong>value</strong> [Function] - A callback to get the <em>value</em> of the cell for sorting or visualization.</li>
